# threatscope

./: .gitignore  README.md  pyproject.toml
src/threatscope/: config.py  config.yaml  main.py  pipeline.py
src/threatscope/etl/: __init__.py
src/threatscope/etl/extractors/: __init__.py  base.py  mitre.py  nvd.py  otx.py
src/threatscope/etl/loaders/: __init__.py  db.py  feature_store.py
src/threatscope/etl/transformers/: __init__.py  base.py  encoder.py  joiner.py  normalizer.py  schema.py
src/threatscope/ml/: __init__.py  dataset.py  evaluate.py  model.py  predict.py  train.py
