[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threatscope"]

[project]
name            = "threatscope"
version         = "0.1.0"
description     = "Threat actor behavior prediction pipeline"
readme          = "README.md"
requires-python = ">=3.11"
authors         = [
  { name = "Zandt Lavish" },
]
dependencies    = [
  "stix2",
  "requests",
  "python-dotenv",
  "pyyaml",
  "httpx",
  "pandas",
  "sqlalchemy",
  "pyarrow",
  "keras==3.14.1",
  "tensorflow==2.18.0"
]

[project.optional-dependencies]
dev = [
  "tensorflow-metal==1.2.0"
]

[project.scripts]
threatscope = "threatscope.main:main"
